Add notes how to handle primary/non-primary resources
And improve simple ansible example

--- a/examples/simple/rabbitmq/run.yml
+++ b/examples/simple/rabbitmq/run.yml
@@ -2,4 +2,5 @@
 - hosts: [rabbitmq]
   sudo: yes
   tasks:
-    - shell: docker run --name {{ rabbitmq.name }} -d {{ rabbitmq.image }}
+    - shell: docker run --net="host" --privileged \
+        --name {{ rabbitmq.name }} -d {{ rabbitmq.image }}
