--- a/examples/simple/user/run.yml
+++ b/examples/simple/user/run.yml
@@ -4,3 +4,12 @@
   tasks:
     - command: docker exec -t {{rabbitmq.name}} /usr/sbin/rabbitmqctl add_user {{user.name}} {{user.password}}
       run_once: true
+
+- hosts: [mariadb]
+  sudo: yes
+  tasks:
+    - command: docker exec -t {{mariadb.name}} \
+        mysql -uroot \
+        -e "CREATE USER '{{user.name}}'@'%' IDENTIFIED BY '{{user.password}}'"
+    - command: docker exec -t {{mariadb.name}} \
+        mysql -uroot -e "GRANT ALL PRIVILEGES ON *.* TO '{{user.name}}'@'%' WITH GRANT OPTION"
