Add tags implementation
User can link resources to nodes with specific tags

--- a/examples/profile_test.yml
+++ b/examples/profile_test.yml
@@ -9,8 +9,5 @@ extensions:
   - id: ansible
     version: '1.0.0'
 
-define_tags:
+tags:
   - env/test_env
-  - rack/1
-  - rack/2
-  - datacenter/1
