apt hangs when it tries to install lxc-docker from ubuntu url

--- a/examples/resources/simple/docker/run.yml
+++ b/examples/resources/simple/docker/run.yml
@@ -5,6 +5,6 @@
     - shell: docker --version
       ignore_errors: true
       register: docker_version
-    - shell: curl -sSL https://get.docker.com/ubuntu/ | sudo sh
+    - shell: curl -sSL https://get.docker.com/ | sudo sh
       when: docker_version|failed
     - shell: docker pull {{ docker.base_image }}
