--- a/examples/resources/mariadb.yml
+++ b/examples/resources/mariadb.yml
@@ -3,14 +3,15 @@ type: resource
 handler: ansible
 version: v1
 actions:
-    run: simple/mariadb/run.yml
-    remove: simple/mariadb/remove.yml
-    wait: simple/mariadb/wait.yml
-    users: simple/mariadb/users.yml
+  run: simple/mariadb/run.yml
+  remove: simple/mariadb/remove.yml
+  wait: simple/mariadb/wait.yml
+  users: simple/mariadb/users.yml
 input:
-    name: maria-test
-    image: tutum/mariadb
-    users:
-        - name: test1
-          password: test1
+  name: mariadb-test
+  image: kollaglue/fedora-rdo-mariadb-app
+  root_password: test1
+  users:
+    - name: test1
+      password: test1
 tags: [service/mariadb]
