--- a/examples/resources/simple/mariadb/users.yml
+++ b/examples/resources/simple/mariadb/users.yml
@@ -3,9 +3,10 @@
   sudo: yes
   tasks:
     - command: docker exec -t {{mariadb.name}} \
-        mysql -uroot \
+        mysql -uroot -p{{mariadb.root_password}} \
         -e "CREATE USER '{{item.name}}'@'%' IDENTIFIED BY '{{item.password}}'"
       with_items: mariadb.users
+
     - command: docker exec -t {{mariadb.name}} \
-        mysql -uroot -e "GRANT ALL PRIVILEGES ON *.* TO '{{item.name}}'@'%' WITH GRANT OPTION"
+        mysql -uroot -p{{mariadb.root_password}} -e "GRANT ALL PRIVILEGES ON *.* TO '{{item.name}}'@'%' WITH GRANT OPTION"
       with_items: mariadb.users
