--- a/examples/resources/simple/keystone/run.yml
+++ b/examples/resources/simple/keystone/run.yml
@@ -1,9 +1,17 @@
 
-- hosts: [keystone]
+- hosts: [service/keystone]
   sudo: yes
   tasks:
+    - shell: docker rm -f {{name}} || true
+      # NOTE(eli): specify restart policy (--restart parameter) for
+      # keystone conatiner if there are more than 2 keystone containers
+      # to be deployed, they both will perform db migration and will fail,
+      # the container which is first should create database, the rest of
+      # the containers should be just restarted
     - shell: docker run -d --net="host" --privileged \
-        -e "DB_ROOT_PASSWORD={{mariadb.root_password}}" \
-        -e "KEYSTONE_PUBLIC_SERVICE_PORT={{keystone.public_port}}" \
-        -e "KEYSTONE_ADMIN_SERVICE_PORT={{keystone.admin_port}}" \
-        --name {{keystone.name}} {{keystone.image}}
+        -e "DB_ROOT_PASSWORD={{db_root_password}}" \
+        -e "KEYSTONE_PUBLIC_SERVICE_PORT={{public_port}}" \
+        -e "KEYSTONE_ADMIN_SERVICE_PORT={{admin_port}}" \
+        -e "MARIADB_SERVICE_HOST={{db_host}}" \
+        --restart="on-failure:10" \
+        --name {{name}} {{image}}
