--- a/examples/resources/simple/mariadb/users.yml
+++ b/examples/resources/simple/mariadb/users.yml
@@ -1,12 +1,12 @@
 
-- hosts: [mariadb]
+- hosts: [service/mariadb]
   sudo: yes
   tasks:
-    - command: docker exec -t {{mariadb.name}} \
-        mysql -uroot -p{{mariadb.root_password}} \
+    - command: docker exec -t {{name}} \
+        mysql -uroot -p{{root_password}} \
         -e "CREATE USER '{{item.name}}'@'%' IDENTIFIED BY '{{item.password}}'"
-      with_items: mariadb.users
+      with_items: users
 
-    - command: docker exec -t {{mariadb.name}} \
-        mysql -uroot -p{{mariadb.root_password}} -e "GRANT ALL PRIVILEGES ON *.* TO '{{item.name}}'@'%' WITH GRANT OPTION"
-      with_items: mariadb.users
+    - command: docker exec -t {{name}} \
+        mysql -uroot -p{{root_password}} -e "GRANT ALL PRIVILEGES ON *.* TO '{{item.name}}'@'%' WITH GRANT OPTION"
+      with_items: users
