--- a/examples/resources/haproxy.yml
+++ b/examples/resources/haproxy.yml
@@ -16,7 +16,7 @@ input:
     - service_name: keystone-admin
       bind: '*:8080'
       backends:
-        'with_items': '{{ with_tags("service/keystone") }}'
+        'with_tags': ['service/keystone']
         'item':
           'remote_name': '{{ item.name }}'
           'remote_addr': '{{ item.node.ip }}:{{ item.admin_port }}'
@@ -24,7 +24,7 @@ input:
     - service_name: keystone-pub
       bind: '*:8081'
       backends:
-        with_items: '{{ with_tags("service/keystone") }}'
+        with_tags: ["service/keystone"]
         item:
           remote_name: '{{ item.name }}'
           remote_addr: '{{ item.node.ip }}:{{ item.public_port }}'
