Implement ensure mechanism for containers
Added workaround to stop containers which should
not be on the node, accouding to a file with list
of services which is filled in by ansible's tasks.

It allows to implement scale-down and resource
migration.

--- a/examples/resources/haproxy.yml
+++ b/examples/resources/haproxy.yml
@@ -9,7 +9,7 @@ actions:
   remove: simple/haproxy/remove.yml
 
 input:
-  name: haproxy-test
+  name: solar.haproxy-test
   image: 'haproxy:1.5'
 
   services:
