--- a/examples/resources/simple/mariadb/run.yml
+++ b/examples/resources/simple/mariadb/run.yml
@@ -2,6 +2,7 @@
 - hosts: [service/mariadb]
   sudo: yes
   tasks:
+    - shell: echo {{name}} >> /var/lib/solar/containers_list
     - shell: docker ps | grep -q {{name}}
       ignore_errors: true
       register: is_running
