--- a/examples/resources/keystone.yml
+++ b/examples/resources/keystone.yml
@@ -15,7 +15,7 @@ input:
   db_host:
     first_with_tags: ["entrypoint/mariadb"]
     item: '{{ item.node.ip }}'
-  admin_port: 35357
+  admin_port: '{{ this.node.keystone_admin_port|d(35357) }}'
   public_port: 5000
   name: solar.keystone-test
   image: kollaglue/centos-rdo-keystone
