example.py fixes, tests added

--- a/resources/docker_container/actions/run.yml
+++ b/resources/docker_container/actions/run.yml
@@ -9,7 +9,9 @@
        net: host
        ports:
          {% for port in ports.value %}
-         - {{ port['value'] }}:{{ port['value'] }}
+         {% for p in port['value'] %}
+         - {{ p['value'] }}:{{ p['value'] }}
+         {% endfor %}
          {% endfor %}
        volumes:
          # TODO: host_binds might need more work
