--- a/resources/docker_container/actions/run.yml
+++ b/resources/docker_container/actions/run.yml
@@ -7,12 +7,15 @@
        image: {{ image }}
        state: running
        net: host
+       {% if ports.value %}
        ports:
          {% for port in ports.value %}
          {% for p in port['value'] %}
          - {{ p['value'] }}:{{ p['value'] }}
          {% endfor %}
          {% endfor %}
+       {% endif %}
+       {% if host_binds.value %}
        volumes:
          # TODO: host_binds might need more work
          # Currently it's not that trivial to pass custom src: dst here
@@ -21,3 +24,4 @@
          {% for bind in host_binds.value %}
          - {{ bind['value']['src'] }}:{{ bind['value']['dst'] }}:{{ bind['value'].get('mode', 'ro') }}
          {% endfor %}
+       {% endif %}
