--- a/resources/haproxy_keystone_config/meta.yaml
+++ b/resources/haproxy_keystone_config/meta.yaml
@@ -9,10 +9,10 @@ input:
       schema: int!
       value: 9999
     ports:
-      schema: [int]
+      schema: [{value: int}]
       value:
     servers:
-      schema: [str]
+      schema: [{value: str}]
       value:
 
 tags: [resources/haproxy, resource/haproxy_keystone_config]
