--- a/resources/glance_config/templates/glance-api.conf
+++ b/resources/glance_config/templates/glance-api.conf
@@ -14,15 +14,15 @@ scrubber_datadir = /var/lib/glance/scrubber
 image_cache_dir = /var/lib/glance/image-cache/
 
 [database]
-connection = mysql://glance:GLANCE_DBPASS@mysql/glance
+connection = mysql://{{ mysql_user }}:{{ mysql_password }}@{{ mysql_ip }}/{{ mysql_db }}
 backend = sqlalchemy
 
 [keystone_authtoken]
 auth_uri = http://{{ keystone_ip }}:{{ keystone_port }}/v2.0
 identity_uri = http://{{ keystone_ip }}:35357
-admin_tenant_name = service
-admin_user = glance
-admin_password = GLANCE_PASS
+admin_tenant_name = service_admins
+admin_user = glance_admin
+admin_password = password1234
 revocation_cache_time = 10
 
 [paste_deploy]
