--- a/resources/glance_config/templates/glance-registry-paste.ini
+++ b/resources/glance_config/templates/glance-registry-paste.ini
@@ -1,6 +1,7 @@
 # Use this pipeline for no auth - DEFAULT
 [pipeline:glance-registry]
-pipeline = osprofiler unauthenticated-context registryapp
+#pipeline = osprofiler unauthenticated-context registryapp
+pipeline = authtoke context registryapp
 
 # Use this pipeline for keystone auth
 [pipeline:glance-registry-keystone]
@@ -23,6 +24,10 @@ paste.filter_factory = glance.api.middleware.context:UnauthenticatedContextMiddl
 
 [filter:authtoken]
 paste.filter_factory = keystonemiddleware.auth_token:filter_factory
+identity_uri = http://{{ keystone_ip }}:35357
+admin_user = glance_admin
+admin_tenant_name = service_admins
+admin_password = password1234
 
 [filter:osprofiler]
 paste.filter_factory = osprofiler.web:WsgiMiddleware.factory
