--- a/resources/glance_config/templates/glance-api-paste.ini
+++ b/resources/glance_config/templates/glance-api-paste.ini
@@ -1,6 +1,7 @@
 # Use this pipeline for no auth or image caching - DEFAULT
 [pipeline:glance-api]
-pipeline = versionnegotiation osprofiler unauthenticated-context rootapp
+#pipeline = versionnegotiation osprofiler unauthenticated-context rootapp
+pipeline = versionnegotiation authtoken context appv1app
 
 # Use this pipeline for image caching and no auth
 [pipeline:glance-api-caching]
@@ -66,7 +67,11 @@ paste.filter_factory = glance.api.middleware.context:UnauthenticatedContextMiddl
 
 [filter:authtoken]
 paste.filter_factory = keystonemiddleware.auth_token:filter_factory
-delay_auth_decision = true
+identity_uri = http://{{ keystone_ip }}:35357
+admin_user = glance_admin
+admin_tenant_name = service_admins
+admin_password = password1234
+#delay_auth_decision = true
 
 [filter:gzip]
 paste.filter_factory = glance.api.middleware.gzip:GzipMiddleware.factory
