--- a/resources/glance_config/templates/glance-registry-paste.ini
+++ b/resources/glance_config/templates/glance-registry-paste.ini
@@ -25,9 +25,9 @@ paste.filter_factory = glance.api.middleware.context:UnauthenticatedContextMiddl
 [filter:authtoken]
 paste.filter_factory = keystonemiddleware.auth_token:filter_factory
 identity_uri = http://{{ keystone_ip }}:35357
-admin_user = glance_admin
-admin_tenant_name = service_admins
-admin_password = password1234
+admin_user = {{ keystone_admin_user }}
+admin_tenant_name = {{ keystone_admin_tenant }}
+admin_password = {{ keystone_admin_password }}
 
 [filter:osprofiler]
 paste.filter_factory = osprofiler.web:WsgiMiddleware.factory
