--- a/resources/glance_config/templates/glance-registry.conf
+++ b/resources/glance_config/templates/glance-registry.conf
@@ -8,14 +8,14 @@ limit_param_default = 25
 
 [database]
 backend = sqlalchemy
-connection = mysql://glance:GLANCE_DBPASS@mysql/glance
+connection = mysql://{{ mysql_user }}:{{ mysql_password }}@{{ mysql_ip }}/{{ mysql_db }}
 
 [keystone_authtoken]
-auth_uri = http://keystone:5000/v2.0
-identity_uri = http://keystone:35357
-admin_tenant_name = service
-admin_user = glance
-admin_password = GLANCE_PASS
+auth_uri = http://{{ keystone_ip }}:{{ keystone_port }}/v2.0
+identity_uri = http://{{ keystone_ip }}:35357
+admin_tenant_name = {{ keystone_admin_tenant }}
+admin_user = {{ keystone_admin_user }}
+admin_password = {{ keystone_admin_password }}
 
 [paste_deploy]
 flavor=keystone
