--- a/resources/glance_config/templates/glance-api.conf
+++ b/resources/glance_config/templates/glance-api.conf
@@ -20,9 +20,9 @@ backend = sqlalchemy
 [keystone_authtoken]
 auth_uri = http://{{ keystone_ip }}:{{ keystone_port }}/v2.0
 identity_uri = http://{{ keystone_ip }}:35357
-admin_tenant_name = service_admins
-admin_user = glance_admin
-admin_password = password1234
+admin_tenant_name = {{ keystone_admin_tenant }}
+admin_user = {{ keystone_admin_user }}
+admin_password = {{ keystone_admin_password }}
 revocation_cache_time = 10
 
 [paste_deploy]
