Added glance keystone user resource instance

--- a/resources/keystone_user/meta.yaml
+++ b/resources/keystone_user/meta.yaml
@@ -9,7 +9,7 @@ input:
       schema: int!
       value:
     login_user:
-      schema: str!
+      schema: str
       value:
     login_token:
       schema: str!
