Glance: more configs, keystone_user fix

--- a/resources/keystone_config/actions/run.yml
+++ b/resources/keystone_config/actions/run.yml
@@ -2,6 +2,8 @@
   sudo: yes
   vars:
     admin_token: {{admin_token}}
+    keystone_host: {{ ip }}
+    keystone_port: {{ port }}
     db_user: {{db_user}}
     db_password: {{db_password}}
     db_host: {{db_host}}
@@ -12,3 +14,4 @@
     - template: src={{resource_dir}}/templates/default_catalog.templates dest={{config_dir}}/default_catalog.templates
     - template: src={{resource_dir}}/templates/logging.conf dest={{config_dir}}/logging.conf
     - template: src={{resource_dir}}/templates/policy.json dest={{config_dir}}/policy.json
+    - template: src={{resource_dir}}/templates/exports dest={{ config_dir }}/keystone-exports
