--- a/resources/glance_config/actions/run.yml
+++ b/resources/glance_config/actions/run.yml
@@ -23,6 +23,7 @@
     - file: path={{ config_dir.value['src'] }}/glance-scrubber.conf state=touch
     - file: path={{ config_dir.value['src'] }}/policy.json state=touch
     - file: path={{ config_dir.value['src'] }}/schema-image.json state=touch
+    - file: path={{ config_dir.value['src'] }}/exports state=touch
     - template: src={{ resource_dir }}/templates/glance-api.conf dest={{ config_dir.value['src'] }}/glance-api.conf
     - template: src={{ resource_dir }}/templates/glance-api-paste.ini dest={{ config_dir.value['src'] }}/glance-api-paste.ini
     - template: src={{ resource_dir }}/templates/glance-cache.conf dest={{ config_dir.value['src'] }}/glance-cache.conf
@@ -31,3 +32,4 @@
     - template: src={{ resource_dir }}/templates/glance-scrubber.conf dest={{ config_dir.value['src'] }}/glance-scrubber.conf
     - template: src={{ resource_dir }}/templates/policy.json dest={{ config_dir.value['src'] }}/policy.json
     - template: src={{ resource_dir }}/templates/schema-image.json dest={{ config_dir.value['src'] }}/schema-image.json
+    - template: src={{ resource_dir }}/templates/exports dest={{ config_dir.value['src'] }}/glance-export
