--- a/resources/mariadb_service/actions/run.yml
+++ b/resources/mariadb_service/actions/run.yml
@@ -10,3 +10,8 @@
         - {{ port }}:3306
         env:
             MYSQL_ROOT_PASSWORD: {{ root_password }}
+    - shell: docker exec -t {{ name }} mysql -p{{ root_password }} -uroot -e "select 1"
+      register: result
+      until: result.rc == 0
+      retries: 10
+      delay: 0.5
