--- a/resources/keystone_service_endpoint/meta.yaml
+++ b/resources/keystone_service_endpoint/meta.yaml
@@ -11,13 +11,28 @@ input:
     admin_token:
       schema: str!
       value:
-    user_name:
+    port:
+      schema: int!
+      value:
+    admin_port:
+      schema: int!
+      value:
+    name:
       schema: str!
       value:
-    user_password:
+    type:
       schema: str!
       value:
-    tenant_name:
+    description:
+      schema: str!
+      value:
+    publicurl:
+      schema: str!
+      value:
+    internalurl:
+      schema: str!
+      value:
+    adminurl:
       schema: str!
       value:
     ip:
@@ -30,4 +45,5 @@ input:
       schema: str!
       value:
 
-tags: [resource/keystone_user, resources/keystone]
+tags: [resource/keystone_tenant, resources/keystone]
+
