--- a/resources/keystone_tenant/meta.yaml
+++ b/resources/keystone_tenant/meta.yaml
@@ -11,12 +11,6 @@ input:
     admin_token:
       schema: str!
       value:
-    user_name:
-      schema: str!
-      value:
-    user_password:
-      schema: str!
-      value:
     tenant_name:
       schema: str!
       value:
@@ -30,4 +24,4 @@ input:
       schema: str!
       value:
 
-tags: [resource/keystone_user, resources/keystone]
+tags: [resource/keystone_tenant, resources/keystone]
