--- a/resources/mariadb_service/meta.yaml
+++ b/resources/mariadb_service/meta.yaml
@@ -4,7 +4,7 @@ version: 1.0.0
 input:
     image: 
       schema: str!
-      value: kollaglue/fedora-rdo-mariadb-app
+      value: mariadb
     root_password:
       schema: str!
       value: password
