Glance docker container is up
But for some reason docker ports aren't exposed

--- a/resources/glance_config/meta.yaml
+++ b/resources/glance_config/meta.yaml
@@ -13,8 +13,8 @@ input:
       value: []
 
     config_dir:
-      schema: {src: str!, dst: str!}
-      value: {src: /etc/solar/glance, dst: /etc/glance}
+      schema: {src: str!, dst: str!, mode: str}
+      value: {src: /etc/solar/glance, dst: /etc/glance, mode: rw}
     api_port:
       schema: int!
       value: 9292
