--- a/resources/glance_api_service/actions/run.yml
+++ b/resources/glance_api_service/actions/run.yml
@@ -3,6 +3,7 @@
   sudo: yes
   tasks:
     - docker:
+       command: /bin/bash -c "glance-manage db_sync && /usr/bin/glance-api"
        name: {{ name }}
        image: {{ image }}
        state: running
@@ -25,9 +26,3 @@
          - {{ bind['value']['src'] }}:{{ bind['value']['dst'] }}:{{ bind['value'].get('mode', 'ro') }}
          {% endfor %}
        {% endif %}
-       env:
-         GLANCE_DB_PASSWORD: {{ db_password }}
-         GLANCE_KEYSTONE_PASSWORD: {{ keystone_password }}
-         KEYSTONE_ADMIN_SERVICE_HOST: {{ keystone_host }}
-         KEYSTONE_ADMIN_TOKEN: {{ keystone_admin_token }}
-         KEYSTONE_PUBLIC_SERVICE_HOST: {{ keystone_host }}
