Simulate removing keystone services
Ansible modules does not implemenet removing yet

--- a/resources/keystone_service_endpoint/actions/remove.yaml
+++ b/resources/keystone_service_endpoint/actions/remove.yaml
@@ -1,1 +1,6 @@
-#todo
+- hosts: [{{ ip }}]
+  sudo: yes
+  tasks:
+    - name: keystone service and endpoint
+    #TODO: not implemented in module
+      pause: seconds=1
