--- a/resources/keystone_role/actions/remove.yml
+++ b/resources/keystone_role/actions/remove.yml
@@ -2,4 +2,5 @@
   sudo: yes
   tasks:
     - name: keystone role
-      keystone_user: endpoint=http://{{keystone_host}}:{{keystone_port}}/v2.0/ token={{admin_token}} user={{user_name}} tenant={{tenant_name}} role={{role_name}} state=absent
+    #TODO: not implemented in module
+      pause: seconds=1
