--- a/resources/keystone_user/actions/remove.yml
+++ b/resources/keystone_user/actions/remove.yml
@@ -2,4 +2,5 @@
   sudo: yes
   tasks:
     - name: keystone user
-      keystone_user: endpoint=http://{{keystone_host}}:{{keystone_port}}/v2.0/ token={{admin_token}} user={{user_name}} password={{user_password}} tenant={{tenant_name}} state=absent
+    #TODO: not implemented in module
+      pause: seconds=1
