--- a/resources/glance_config/templates/glance-api.conf
+++ b/resources/glance_config/templates/glance-api.conf
@@ -15,11 +15,11 @@ image_cache_dir = /var/lib/glance/image-cache/
 
 [database]
 connection = mysql://{{ mysql_user }}:{{ mysql_password }}@{{ mysql_ip }}/{{ mysql_db }}
-backend = sqlalchemy
+backend = mysql
 
 [keystone_authtoken]
 auth_uri = http://{{ keystone_ip }}:{{ keystone_port }}/v2.0
-identity_uri = http://{{ keystone_ip }}:35357
+identity_uri = http://{{ keystone_ip }}:{{ keystone_admin_port }}
 admin_tenant_name = {{ keystone_admin_tenant }}
 admin_user = {{ keystone_admin_user }}
 admin_password = {{ keystone_admin_password }}
