--- a/resources/glance_config/templates/glance-registry.conf
+++ b/resources/glance_config/templates/glance-registry.conf
@@ -7,12 +7,12 @@ api_limit_max = 1000
 limit_param_default = 25
 
 [database]
-backend = sqlalchemy
+backend = mysql
 connection = mysql://{{ mysql_user }}:{{ mysql_password }}@{{ mysql_ip }}/{{ mysql_db }}
 
 [keystone_authtoken]
 auth_uri = http://{{ keystone_ip }}:{{ keystone_port }}/v2.0
-identity_uri = http://{{ keystone_ip }}:35357
+identity_uri = http://{{ keystone_ip }}:{{ keystone_admin_port }}
 admin_tenant_name = {{ keystone_admin_tenant }}
 admin_user = {{ keystone_admin_user }}
 admin_password = {{ keystone_admin_password }}
