--- a/resources/glance_config/templates/glance-api-paste.ini
+++ b/resources/glance_config/templates/glance-api-paste.ini
@@ -67,7 +67,7 @@ paste.filter_factory = glance.api.middleware.context:UnauthenticatedContextMiddl
 
 [filter:authtoken]
 paste.filter_factory = keystonemiddleware.auth_token:filter_factory
-identity_uri = http://{{ keystone_ip }}:35357
+identity_uri = http://{{ keystone_ip }}:{{ keystone_admin_port }}
 admin_user = {{ keystone_admin_user }}
 admin_tenant_name = {{ keystone_admin_tenant }}
 admin_password = {{ keystone_admin_password }}
