Working mariadb -> keystone -> haproxy connections

--- a/resources/docker/meta.yaml
+++ b/resources/docker/meta.yaml
@@ -4,9 +4,13 @@ version: 1.0.0
 
 input:
     ip:
+      schema: str!
+      value:
     ssh_user:
+      schema: str!
+      value:
     ssh_key:
+      schema: str!
+      value:
 
-input-types:
-
-tags: [resource/docker]
+tags: [resources/docker]
