--- a/resources/mariadb_keystone_user/meta.yaml
+++ b/resources/mariadb_keystone_user/meta.yaml
@@ -1,4 +1,4 @@
-id: mariadb_user
+id: mariadb_keystone_user
 handler: ansible
 version: 1.0.0
 actions:
@@ -7,10 +7,10 @@ actions:
 input:
     new_user_password:
       schema: str!
-      value:
+      value: keystone
     new_user_name:
       schema: str!
-      value:
+      value: keystone
     db_name:
       schema: str!
       value:
@@ -33,5 +33,5 @@ input:
       schema: str!
       value:
 
-tags: [resource/mariadb_user, resources/mariadb]
+tags: [resource/mariadb_keystone_user, resources/mariadb]
 
