--- a/resources/keystone_service_endpoint/actions/remove.yaml
+++ b/resources/keystone_service_endpoint/actions/remove.yaml
@@ -1,6 +1,20 @@
 - hosts: [{{ ip }}]
   sudo: yes
+  vars:
+    ip: {{ip}}
+    port: {{port}}
+    admin_port: {{admin_port}}
   tasks:
-    - name: keystone service and endpoint
-    #TODO: not implemented in module
-      pause: seconds=1
+    - name: remove keystone service and endpoint
+      keystone_service:
+        token: {{admin_token}}
+        name: {{name}}
+        type: {{type}}
+        description: {{description}}
+        publicurl: {{publicurl}}
+        internalurl: {{internalurl}}
+        adminurl: {{adminurl}}
+        region: "RegionOne"
+        state: present
+        endpoint: http://{{keystone_host}}:{{keystone_port}}/v2.0/
+
